# rs-glob

./: .eslintrc  .gitignore  .npmrc  Cargo.toml  echo  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: bench.yml
benchmark/: bench.ts  package.json  tsconfig.json
core/: Cargo.toml
core/benches/: .gitignore  bench.rs
core/src/: lib.rs  main.rs
dev/bench/: data.js
examples/demo01/: index.mjs  package.json
glob-match/: Cargo.toml
node/: Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
node/__test__/: index.spec.mjs  index.spec.ts
node/npm/android-arm-eabi/: README.md  package.json
node/npm/android-arm64/: README.md  package.json
node/npm/darwin-arm64/: README.md  package.json
node/npm/darwin-x64/: README.md  package.json
node/npm/freebsd-x64/: README.md  package.json
node/npm/linux-arm-gnueabihf/: README.md  package.json
node/npm/linux-arm64-gnu/: README.md  package.json
node/npm/linux-arm64-musl/: README.md  package.json
node/npm/linux-x64-gnu/: README.md  package.json
node/npm/linux-x64-musl/: README.md  package.json
node/npm/win32-arm64-msvc/: README.md  package.json
node/npm/win32-ia32-msvc/: README.md  package.json
node/npm/win32-x64-msvc/: README.md  package.json
node/src/: lib.rs
