[package]
name = "rs_glob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob-match = { path = "../glob-match" }
futures = "*"
tokio = { version = "1.24.1", features = [
  "full",
] }
rayon = { version = "1.6.1" }
