[package]
name = "rs_glob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob-match = { version = "0.2.0"}
futures = "*"
tokio = { version = "1.24.1", features = [
  "full",
] }
rayon = { version = "1.6.1" }
globwalk = "0.8.1"

[dev-dependencies]
glob = "0.3.1"
criterion = "0.4.0"
globset = "0.4.10"
wax = "0.5"

[[bench]]
name = "bench"
harness = false
