[package]
edition = "2021"
name = "rs-glob-node"
version = "0.0.0"

[lib]
crate-type = [
  "cdylib",
]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.6", default-features = true, features = [
  "full",
] }
napi-derive = "2.9.3"
rs_glob = { path = "../core" }

[build-dependencies]
napi-build = "2.0.1"
